--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/prabodhswamiji"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.vicharan.Activity.prasangList.PrasangList" />
