--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/prabodhswamiji"
         android:supportsRtl="true"
+        android:name=".GlobalApplication"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.vicharan.Activity.prasangList.PrasangList" />
         <activity android:name="com.example.vicharan.Activity.updatePrasang.UpdatePrasang" />
